[package]
name = "arduino-ui-device"
version = "0.1.0"
authors = ["pahlavaubivca <pahlavaubivca@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "arduino-ui-device"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0.0"
#st7735-lcd = "0.10.0"
#metro_m4 = { version = "0.12.0", features=["rt"] }
embedded-graphics = "0.8"
embedded-text = "0.7.0"
#rtt-target = { version = "0.3.0", features = ["cortex-m"] }
#panic-rtt-target = { version = "0.1.2", features=["cortex-m"] }

[dependencies.embedded-graphics-core]
version = "0.4"
optional = true

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "3e362624547462928a219c40f9ea8e3a64f21e5f"
features = ["arduino-nano"]

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.79"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
